src/tests/expand_fn/pass/test.tj
fn rec<n>() = (a)
    if n > 0 then
        a = mux(0, 1, 1)
        b = rec<n-1>()
    else 
        a = 1
    end if

module main() = ()
    automaton
        node n 
            b = 0
            a = 1 + 1 + 1 + 1 + 1 + 1 * rec<5>()
        transition